2003-07-27  Zack Weinberg  <zack@codesourcery.com>

	* c-decl.c (store_parm_decls_newstyle, store_parm_decls_oldstyle):
	New functions split out of store_parm_decls.
	Avoid unnecessary work. Use local variables consistently.
	(store_parm_decls): Likewise.

	(finish_function): No need to set functionbody flag on call to
	poplevel.
	(struct language_function): Remove scope field.
	(c_push_function_context, c_pop_function_context): No need to
	save and restore current_scope.

2003-07-27  Nathan Sidwell  <nathan@codesourcery.com>

	* doc/extend.texi (Deprecated Features): Implicit typename is
	gone. Default args on types is going.

2003-07-26  J"orn Rennecke <joern.rennecke@superh.com>

	* Makefile.in (ifcvt.o): Depend on target.h
	* ifcvt.c (target.h): Include.
	(if_convert): Don't call mark_loop_exit_edges if we can't
	modify jumps.

2003-07-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Testing): Adjust required versions of DejaGnu.

2003-07-26  Richard Henderson  <rth@redhat.com>

	PR inline-asm/11676
	* cse.c (count_reg_usage): Handle asm_operands properly.

2003-07-26  Roger Sayle  <roger@eyesopen.com>

	* builtins.def (DEF_FALLBACK_BUILTIN): Delete.
	(DEF_EXT_FALLBACK_BUILTIN): Delete.
	(BUILT_IN_BZERO, BUILT_IN_BCOPY, BUILT_IN_BCMP): Declare using
	the regular DEF_EXT_LIB_BUILTIN macro.
	(BUILT_IN_FPUTC, BUILT_IN_FPUTS, BUILT_IN_FWRITE): Declare using
	the regular DEF_LIB_BUILTIN macro.
	(BUILT_IN_PUTCHAR_UNLOCKED, BUILT_IN_PUTS_UNLOCKED,
	BUILT_IN_FPUTC_UNLOCKED, BUILT_IN_FPUTS_UNLOCKED,
	BUILT_IN_FWRITE_UNLOCKED): Declare using the regular
	DEF_EXT_LIB_BUILTIN macro.

	* c-decl.c (duplicate_decls): Remove code to handle builtin
	functions prototyped without an argument list.

2003-07-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/i386/winnt.c: Revert 2003-07-08 change.
	(i386_pe_section_type_flags): Remove error_with_decl here too.

2003-07-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
